fix: left align of nearyou citybike card header and content

--- a/app/component/park-rental-station.scss
+++ b/app/component/park-rental-station.scss
@@ -11,7 +11,7 @@
       letter-spacing: -0.025em;
     }
 
-    padding-bottom: 16px;
+    padding-bottom: 12px;
   }
 
   .small-header {
